--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="true">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Typing Effect</title>
 
     <style>
         @import url('https://fonts.googleapis.com/css?family=Work+Sans');
@@ -25,6 +25,7 @@
             background-size: cover;
             background: linear-gradient(to right, #0cebeb, #20e3b2, #29ffc6);
             margin: 0;
+            font-size: 64px;
         }
 
         .type-wrap {
